style/fix: update snackbar styling to fix opacity issue on iOS

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -88,3 +88,12 @@ main {
   padding: 0 1.5rem;
   width: 100%;
 }
+
+// Snackbar styling
+::ng-deep .mdc-snackbar__surface {
+  background-color: #323232 !important;
+}
+
+::ng-deep .mat-mdc-snack-bar-label {
+  color: #ffffff !important;
+}
